infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /accounts(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 80
      - path: /transactions(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 80
      - path: /fraud(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fraud-service
            port:
              number: 80
